--- a/src/main/resources/com/example/bty/CSSmoduleProduit/Ajoutproduit.css
+++ b/src/main/resources/com/example/bty/CSSmoduleProduit/Ajoutproduit.css
@@ -24,7 +24,7 @@
 }
 
 .grid-pane {
-    -fx-background-color: #ecf0f1;
+    -fx-background-color: #F5F5F5;
     -fx-padding: 25;
     -fx-hgap: 15;
     -fx-vgap: 15;
