--- a/src/main/resources/Fxml/Coach/Coach.fxml
+++ b/src/main/resources/Fxml/Coach/Coach.fxml
@@ -6,9 +6,13 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="com.example.bty.Controllers.Coach.CoachController"
-            prefHeight="400.0" prefWidth="600.0">
+<BorderPane xmlns="http://javafx.com/javafx"
+            xmlns:fx="http://javafx.com/fxml">
+    <left>
+        <fx:include source="CoachMenu.fxml"/>
+    </left>
+    <center>
+        <fx:include source="DashboardCoach.fxml" />
+    </center>
 
-</AnchorPane>
+</BorderPane>
