--- a/src/main/resources/com/example/bty/CSSmoduleCours/membre.css
+++ b/src/main/resources/com/example/bty/CSSmoduleCours/membre.css
@@ -14,6 +14,7 @@
     -fx-font-size: 16px;
     -fx-background-color: white;
     -fx-border-color: #2980b9;
+    -fx-translate-x: 220px;
 }
 
 /* TextField styles */
@@ -79,6 +80,7 @@
     -fx-background-radius: 10;
     -fx-background-color: #A62609;
     -fx-text-fill: white;
+    -fx-translate-x: 230px;
 }
 
 .reset-button {
@@ -89,6 +91,7 @@
     -fx-background-radius: 10;
     -fx-background-color: white;
     -fx-text-fill: #A62609;
+    -fx-translate-x: 750px;
 }
 /* Add to Cart button styles */
 .add-to-cart-button {
