--- a/src/main/resources/dash.css
+++ b/src/main/resources/dash.css
@@ -8,6 +8,14 @@ and open the template in the editor.
     @author MarcoMan
  * Subscribe our YouTube Channel: https://www.youtube.com/@marcomanchannel
 */
+.table-view .column-id {
+    -fx-text-fill: #1E0F1C;
+    -fx-font-size: 13px;
+    -fx-font-family: 'Segoe UI', Tahoma, Geneva, Verdana;
+
+}
+
+
 
 .border-pane{
     -fx-border-color: #000;
@@ -57,22 +65,6 @@ and open the template in the editor.
     -fx-font-size: 14px;
     -fx-font-family: Arial;
 }
-
-.nav-btnproduit{
-    -fx-font-size: 12px;
-    -fx-padding: 10 16;
-    -fx-background-radius: 10;
-    -fx-background-color: #A62609;
-    -fx-text-fill: white;
-}
-
-.nav-btnactualiser{
-    -fx-font-size: 12px;
-    -fx-padding: 10 16;
-    -fx-background-radius: 10;
-    -fx-background-color: #7AA95C;
-    -fx-text-fill: white;
-}
 .nav-btn:hover{
     -fx-background-color: #fff;
     -fx-text-fill: #000;
@@ -121,7 +113,7 @@ and open the template in the editor.
 
 .table-view{
     -fx-background-color: transparent;
-    -fx-border-color: #2c3e50;
+    -fx-border-color: linear-gradient(to top right, #2c2c57, #392b78);
     -fx-border-radius: 8px;
     -fx-border-width: 2px;
     -fx-padding: 0px;
@@ -130,7 +122,7 @@ and open the template in the editor.
     -fx-alignment: CENTER;
 }
 .table-view .column-header-background{
-    -fx-background-color: #2c3e50;
+    -fx-background-color: linear-gradient(to top right, #2c2c57, #392b78);
     -fx-background-radius: 8px 8px 0px 0px;
 }
 .table-view .column-header, .filter{
