--- a/src/main/resources/Fxml/Coach/Coach.fxml
+++ b/src/main/resources/Fxml/Coach/Coach.fxml
@@ -1,18 +1,18 @@
-<?xml version="1.0" encoding="UTF-8"?>
+<!--<?xml version="1.0" encoding="UTF-8"?>-->
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<!--<?import java.lang.*?>-->
+<!--<?import java.util.*?>-->
+<!--<?import javafx.scene.*?>-->
+<!--<?import javafx.scene.control.*?>-->
+<!--<?import javafx.scene.layout.*?>-->
 
-<BorderPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml">
-    <left>
-        <fx:include source="CoachMenu.fxml"/>
-    </left>
-    <center>
-        <fx:include source="DashboardCoach.fxml" />
-    </center>
+<!--<BorderPane xmlns="http://javafx.com/javafx"-->
+<!--            xmlns:fx="http://javafx.com/fxml">-->
+<!--    <left>-->
+<!--        <fx:include source="CoachMenu.fxml"/>-->
+<!--    </left>-->
+<!--    <center>-->
+<!--        <fx:include source="DashboardCoach.fxml" />-->
+<!--    </center>-->
 
-</BorderPane>
+<!--</BorderPane>-->
