--- a/src/main/resources/dashboardDesign.css
+++ b/src/main/resources/dashboardDesign.css
@@ -47,7 +47,11 @@ and open the template in the editor.
     -fx-border-color: #000;
     -fx-border-width: 0px .2px .4px .4px;
 }
-
+.nav-vbox{
+    -fx-background-color: linear-gradient(to top right, #2c2c57, #392b78);
+    -fx-border-color: #000;
+    -fx-border-width: 0px .2px .4px .4px;
+}
 .nav-btn{
     -fx-background-color: transparent;
     -fx-cursor:hand;
