--- a/src/main/resources/dashboardDesign.css
+++ b/src/main/resources/dashboardDesign.css
@@ -98,8 +98,26 @@ and open the template in the editor.
 
 
 .white-bg{
-    -fx-background-color: #fff;
+    -fx-background-color: white	;
+    -fx-background-radius: 2%; /* Applique un rayon de 50% pour rendre le fond circulaire */
+    -fx-border-radius:2%;
+    -fx-border-color: #2c3e50;
+    -fx-border-width: 1px;
+}
+
+.bg{
+    -fx-background-color: white	;
+    -fx-background-radius: 6%; /* Applique un rayon de 50% pour rendre le fond circulaire */
+
+}
+
+
+
+
+.white-bg1{
+    -fx-background-color: white	;
     -fx-background-radius: 6px;
+
 }
 
 .textfield{
@@ -145,9 +163,35 @@ and open the template in the editor.
     -fx-size: 50px;
 }
 .table-view .column-header .label{
-    -fx-text-fill: #fff;
+    -fx-text-fill: MintCream;
     -fx-font-family: Arial;
 }
+
+
+
+/* dashboardDesign.css */
+
+/* Style du champ de recherche */
+.search-field {
+    -fx-background-color: white;
+    -fx-background-radius: 8;
+    -fx-border-color: #ddd;
+    -fx-border-radius: 8;
+    -fx-padding: 10;
+    -fx-font-size: 12;
+    -fx-text-fill: #1E0F1C;
+    -fx-border-color: #2c3e50;
+    -fx-border-width: 1px;
+}
+
+/* Style du texte de la barre de recherche lorsqu'elle est inactive */
+
+
+/* Style du texte de la barre de recherche lorsqu'elle est active */
+.search-field:focused {
+    -fx-border-color: #3498db;
+}
+
 
 
 
