--- a/src/main/resources/dashboardProduit.fxml
+++ b/src/main/resources/dashboardProduit.fxml
@@ -7,7 +7,8 @@
 <?import javafx.scene.shape.*?>
 <?import javafx.scene.text.*?>
 
-<StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="1100.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.bty.Controllers.DashboardProduit">
+<StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="700.0" minWidth="1366.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.bty.Controllers.DashboardProduit">
+
     <AnchorPane fx:id="main_form" prefHeight="200.0" prefWidth="200.0">
         <BorderPane layoutX="146.0" layoutY="29.0" prefHeight="600.0" prefWidth="1100.0" styleClass="border-pane" stylesheets="dashboardDesign.css" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
 
@@ -71,16 +72,16 @@
 
                     <AnchorPane fx:id="dashboard_form" layoutX="143.0" layoutY="126.0" prefHeight="555.0" prefWidth="880.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                         <children>
-                            <AnchorPane layoutX="13.0" layoutY="14.0" prefHeight="153.0" prefWidth="854.0" stylesheets="dashboardDesign.css">
+                            <AnchorPane styleClass="bg" layoutX="13.0" layoutY="14.0" prefHeight="157.0" prefWidth="1110.0" stylesheets="dashboardDesign.css">
                                 <styleClass>
                                     <String fx:value="white-bg" />
                                     <String fx:value="shadow" />
                                 </styleClass>
                                 <children>
-                                    <AnchorPane layoutX="24.0" layoutY="9.0" prefHeight="135.0" prefWidth="246.0" styleClass="nav" stylesheets="dashboardDesign.css">
+                                    <AnchorPane layoutX="92.0" layoutY="11.0" prefHeight="135.0" prefWidth="246.0" styleClass="nav" stylesheets="dashboardDesign.css">
                                         <children>
                                             <FontAwesomeIconView fill="WHITE" glyphName="EXCLAMATION" layoutX="14.0" layoutY="88.0" size="5em" />
-                                            <Label  alignment="CENTER_RIGHT" layoutX="84.0" layoutY="14.0" prefHeight="17.0" prefWidth="148.0" text="Produit moins acheté" textFill="WHITE">
+                                            <Label alignment="CENTER_RIGHT" layoutX="84.0" layoutY="14.0" prefHeight="17.0" prefWidth="148.0" text="Produit moins acheté" textFill="WHITE">
                                                 <font>
                                                     <Font name="Tahoma" size="15.0" />
                                                 </font>
@@ -92,7 +93,7 @@
                                             </Label>
                                         </children>
                                     </AnchorPane>
-                                    <AnchorPane layoutX="315.0" layoutY="10.0" prefHeight="135.0" prefWidth="246.0" styleClass="nav1" stylesheets="dashboardDesign.css">
+                                    <AnchorPane layoutX="429.0" layoutY="9.0" prefHeight="135.0" prefWidth="246.0" styleClass="nav1" stylesheets="dashboardDesign.css">
                                         <children>
                                             <FontAwesomeIconView fill="WHITE" glyphName="SHOPPING_BAG" layoutX="14.0" layoutY="91.0" size="5em" />
                                             <Label alignment="CENTER_RIGHT" layoutX="84.0" layoutY="17.0" prefHeight="17.0" prefWidth="148.0" text="Produit plus vendue" textFill="WHITE">
@@ -107,7 +108,7 @@
                                             </Label>
                                         </children>
                                     </AnchorPane>
-                                    <AnchorPane layoutX="594.0" layoutY="9.0" prefHeight="135.0" prefWidth="246.0" styleClass="nav" stylesheets="dashboardDesign.css">
+                                    <AnchorPane layoutX="772.0" layoutY="9.0" prefHeight="135.0" prefWidth="246.0" styleClass="nav" stylesheets="dashboardDesign.css">
                                         <children>
                                             <FontAwesomeIconView fill="WHITE" glyphName="MONEY" layoutX="14.0" layoutY="91.0" size="5em" />
                                             <Label alignment="CENTER_RIGHT" layoutX="84.0" layoutY="17.0" prefHeight="17.0" prefWidth="148.0" text="Chiffre d'affaires" textFill="WHITE">
@@ -124,33 +125,35 @@
                                     </AnchorPane>
                                 </children>
                             </AnchorPane>
-                            <AnchorPane layoutX="10.0" layoutY="234.0" prefHeight="315.0" prefWidth="861.0" stylesheets="dashboardDesign.css">
+                            <AnchorPane layoutX="8.0" layoutY="293.0" prefHeight="397.0" prefWidth="1120.0" stylesheets="dashboardDesign.css">
                                 <styleClass>
-                                    <String fx:value="white-bg" />
+                                    <String fx:value="white-bg1" />
                                     <String fx:value="shadow" />
                                 </styleClass>
                                 <children>
 
-                                    <AnchorPane layoutX="1.0" layoutY="39.0" prefHeight="311.0" prefWidth="860.0">
-
-                                        <TableView fx:id="tableView" layoutY="-40.0" prefHeight="351.0" prefWidth="860.0" xmlns:fx="http://javafx.com/fxml/1">
-                                            <columns>
-                                                <TableColumn fx:id="idCol" prefWidth="50" text="ID" />
-                                                <TableColumn fx:id="nomCol" prefWidth="170" text="Nom" />
-                                                <TableColumn fx:id="descriptionCol" prefWidth="190" text="Description" />
-                                                <TableColumn fx:id="prixCol" prefWidth="80" text="Prix" />
-                                                <TableColumn fx:id="typeCol" prefWidth="115" text="Type" />
-                                                <TableColumn fx:id="quantiteCol" prefWidth="80" text="Quantité" />
-                                                <TableColumn fx:id="quantiteVenduesCol" prefWidth="120" text="Quantité Vendue" />
-                                                <TableColumn fx:id="actionColumn" prefWidth="100" text="Actions" />
-                                            </columns>
-                                        </TableView>
+                                    <AnchorPane layoutX="2.0" layoutY="29.0" prefHeight="356.0" prefWidth="1117.0">
+                              <children>
+            
+                                           <TableView fx:id="tableView" layoutX="-1.0" layoutY="-66.0" prefHeight="425.0" prefWidth="1118.0">
+                                               <columns>
+                                                   <TableColumn fx:id="idCol" prefWidth="50" text="ID" />
+                                                   <TableColumn fx:id="nomCol" prefWidth="136.0" text="Nom" />
+                                                   <TableColumn fx:id="descriptionCol" prefWidth="248.0" text="Description" />
+                                                   <TableColumn fx:id="prixCol" prefWidth="99.0" text="Prix" />
+                                                   <TableColumn fx:id="typeCol" prefWidth="202.0" text="Type" />
+                                                   <TableColumn fx:id="quantiteCol" prefWidth="145.0" text="Quantité" />
+                                                   <TableColumn fx:id="quantiteVenduesCol" prefWidth="131.0" text="Quantité Vendue" />
+                                                   <TableColumn fx:id="actionColumn" prefWidth="106.0" text="Actions" />
+                                               </columns>
+                                           </TableView>
+                              </children>
                                     </AnchorPane>
                                 </children>
                             </AnchorPane>
-                            <Separator layoutX="14.0" layoutY="179.0" prefHeight="5.0" prefWidth="856.0" />
-                            <Button fx:id="ajout_produit" layoutX="797.0" layoutY="191.0" mnemonicParsing="false" onAction="#ouvrirFenetreAjoutProduit" prefHeight="30.0" prefWidth="69.0" styleClass="nav-btnproduit" stylesheets="dashboardDesign.css" text="Ajout" />
-                            <Button fx:id="actuliser_produit" layoutX="715.0" layoutY="191.0" mnemonicParsing="false" onAction="#actualiserTable" styleClass="nav-btnactualiser" stylesheets="dashboardDesign.css" text="Actualiser" />
+                            <Separator layoutX="14.0" layoutY="179.0" prefHeight="0.0" prefWidth="1099.0" />
+                            <Button fx:id="ajout_produit" layoutX="1054.0" layoutY="212.0" mnemonicParsing="false" onAction="#ouvrirFenetreAjoutProduit" prefHeight="30.0" prefWidth="69.0" styleClass="nav-btnproduit" stylesheets="dashboardDesign.css" text="Ajout" />
+                            <Button fx:id="actuliser_produit" layoutX="964.0" layoutY="212.0" mnemonicParsing="false" onAction="#actualiserTable" styleClass="nav-btnactualiser" stylesheets="dashboardDesign.css" text="Actualiser" />
                         </children>
                     </AnchorPane>
 
