sideBar Admin Done

--- a/src/main/resources/dashboardX.fxml
+++ b/src/main/resources/dashboardX.fxml
@@ -5,13 +5,15 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="1100.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.bty.Controllers.DashboardController">
-    <AnchorPane fx:id="main_form" layoutX="6.0" layoutY="6.0" prefHeight="200.0" prefWidth="200.0">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="750.0" prefWidth="1100.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.bty.Controllers.DashboardController">
+    <AnchorPane fx:id="main_form" layoutX="6.0" layoutY="6.0" prefHeight="750.0" prefWidth="234.0">
         <!--  atheya l borderPane eli feh atop wl left wl center  -->
-        <AnchorPane prefHeight="600.0" prefWidth="1100.0" styleClass="border-pane" stylesheets="dashboardDesign.css" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+        <AnchorPane prefHeight="750.0" prefWidth="234.0" styleClass="border-pane" stylesheets="dashboardDesign.css" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
                <!--                                <top>-->
                <!--                                    <AnchorPane prefHeight="45.0" prefWidth="1100.0" styleClass="semi-top"-->
@@ -55,7 +57,7 @@
          ************************************       SIdeBar ADMIN  *******************************************-->
 
                   <AnchorPane fx:id="dashboard_Admin" layoutX="-10.0" prefHeight="555.0" prefWidth="210.0" visible="true" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-                   <AnchorPane layoutX="6.0" prefHeight="555.0" prefWidth="220.0" stylesheets="dashboardDesign.css" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                   <AnchorPane prefHeight="555.0" prefWidth="220.0" stylesheets="dashboardDesign.css" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                        <styleClass>
                            <String fx:value="nav" />
                            <String fx:value="nav-border" />
@@ -74,31 +76,44 @@
                        </Label>
                        <Line endX="100.0" layoutX="111.0" layoutY="152.0" startX="-100.0" stroke="WHITE" />
                        <Button fx:id="dashboard_btn" layoutX="21.0" layoutY="186.0" mnemonicParsing="false" onAction="#goToDashbordAdmin" prefHeight="35.0" prefWidth="180.0" styleClass="nav-btn" stylesheets="dashboardDesign.css" text="Dashboard" />
-                       <Button fx:id="coaches_btn" layoutX="21.0" layoutY="232.0" mnemonicParsing="false" onAction="#goToCoachs" prefHeight="35.0" prefWidth="180.0" styleClass="nav-btn" stylesheets="dashboardDesign.css" text="Dashboard" />
-                       <Button fx:id="members_btn" layoutX="21.0" layoutY="278.0" mnemonicParsing="false" onAction="#goToMembre" prefHeight="35.0" prefWidth="180.0" styleClass="nav-btn" stylesheets="dashboardDesign.css" text="Dashboard" />
-                       <Button fx:id="logout" layoutX="14.0" layoutY="509.0" mnemonicParsing="false" onAction="#logout" stylesheets="dashboardDesign.css">
+                       <Button fx:id="coaches_btn" layoutX="22.0" layoutY="228.0" mnemonicParsing="false" onAction="#goToCoachs" prefHeight="35.0" prefWidth="180.0" styleClass="nav-btn" stylesheets="dashboardDesign.css" text="Coachs" AnchorPane.bottomAnchor="487.2" />
+                       <Button fx:id="members_btn" layoutX="22.0" layoutY="271.0" mnemonicParsing="false" onAction="#goToMembre" prefHeight="35.0" prefWidth="180.0" styleClass="nav-btn" stylesheets="dashboardDesign.css" text="Membres" />
+                  <Button fx:id="eventsAdmin_btn" layoutX="22.0" layoutY="313.0" mnemonicParsing="false" onAction="#goToCoachs" prefHeight="35.0" prefWidth="180.0" styleClass="nav-btn" stylesheets="dashboardDesign.css" text="Evenements" />
+                  <Button fx:id="coursAdmin_btn" layoutX="22.0" layoutY="357.0" mnemonicParsing="false" onAction="#goToCoachs" prefHeight="35.0" prefWidth="180.0" styleClass="nav-btn" stylesheets="dashboardDesign.css" text="Cours" />
+                  <Button fx:id="storeAdmin_btn" layoutX="22.0" layoutY="405.0" mnemonicParsing="false" onAction="#goToCoachs" prefHeight="35.0" prefWidth="180.0" styleClass="nav-btn" stylesheets="dashboardDesign.css" text="Store" />
+                  <Line endX="100.0" layoutX="112.0" layoutY="449.0" startX="-100.0" stroke="WHITE" />
+                  <Button fx:id="profileAdmin_btn" layoutX="22.0" layoutY="462.0" mnemonicParsing="false" onAction="#goToCoachs" prefHeight="35.0" prefWidth="180.0" styleClass="nav-btn" stylesheets="dashboardDesign.css" text="Profile" />
+                       <Button fx:id="logout00_btn" layoutX="22.0" layoutY="503.0" mnemonicParsing="false" onAction="#goToCoachs" prefHeight="35.0" prefWidth="180.0" styleClass="nav-btn" stylesheets="dashboardDesign.css" text="Logout" />
+                  <FontAwesomeIconView fill="WHITE" glyphName="USER" layoutX="41.0" layoutY="254.0" size="20" text="" />
+                  <FontAwesomeIconView fill="WHITE" glyphName="USERS" layoutX="39.0" layoutY="295.0" size="20" />
+                  <FontAwesomeIconView fill="WHITE" glyphName="CALENDAR" layoutX="40.0" layoutY="337.0" size="20" />
+                  <FontAwesomeIconView fill="WHITE" glyphName="BOOK" layoutX="39.0" layoutY="382.0" size="20" />
+                  <FontAwesomeIconView fill="WHITE" glyphName="SHOPPING_CART" layoutX="40.0" layoutY="429.0" size="20" />
+                          <FontAwesomeIconView fill="WHITE" glyphName="HOME" layoutX="40.0" layoutY="212.0" size="20" text="" />
+                  <FontAwesomeIconView fill="WHITE" glyphName="ID_CARD" layoutX="37.0" layoutY="486.0" size="20" />
+                     <FontAwesomeIconView fill="WHITE" glyphName="EXTERNAL_LINK" layoutX="40.0" layoutY="529.0" size="20" text="" />
+                  <VBox layoutX="17.0" layoutY="601.0" prefHeight="91.0" prefWidth="180.0" styleClass="report_container">
+                     <children>
+                        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Report Suggestion/Bug?" />
+                        <Label prefHeight="18.0" prefWidth="198.0" text="Use this to report any errors or suggestions." />
+                        <Button fx:id="report_btn" mnemonicParsing="false" text="Report">
                            <graphic>
-                               <FontAwesomeIconView fill="WHITE" glyphName="SIGN_OUT" size="2em" />
+                              <FontAwesomeIconView glyphName="PLUS" />
                            </graphic>
-                           <styleClass>
-                               <String fx:value="logout" />
-                               <String fx:value="shadow" />
-                           </styleClass>
-                       </Button>
-                       <Label layoutX="61.0" layoutY="515.0" text="Logout" textFill="WHITE">
-                           <font>
-                               <Font size="15.0" />
-                           </font>
-                       </Label>
+                        </Button>
+                     </children>
+                  </VBox>
+
+
             
-                                               </AnchorPane>
+                       </AnchorPane>
          
                   </AnchorPane>
          </children>
    
-                                                      <!--   ************************************       SIdeBar MEMBRE  *******************************************-->
-   
-                                                      <AnchorPane fx:id="dashboard_membre" layoutX="14.0" layoutY="159.0" prefHeight="555.0" prefWidth="220.0" visible="false">
+             <!--   ************************************       SIdeBar MEMBRE  *******************************************-->
+
+                       <AnchorPane fx:id="dashboard_membre" layoutX="14.0" layoutY="159.0" prefHeight="555.0" prefWidth="220.0" visible="false">
                    <AnchorPane prefHeight="555.0" prefWidth="220.0" stylesheets="dashboardDesign.css" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                        <styleClass>
                            <String fx:value="nav" />
@@ -135,14 +150,14 @@
                                <Font size="15.0" />
                            </font>
                        </Label>
-   
-                                                          </AnchorPane>
+
+                          </AnchorPane>
                </AnchorPane>
-   
-                                          
-                                                         <!--    ************************************       SIdeBar COACH  *******************************************-->
-   
-                                                      <AnchorPane fx:id="dashboard_coach" layoutX="14.0" layoutY="159.0" prefHeight="555.0" prefWidth="220.0" visible="false">
+
+
+                     <!--    ************************************       SIdeBar COACH  *******************************************-->
+
+                          <AnchorPane fx:id="dashboard_coach" layoutX="14.0" layoutY="159.0" prefHeight="555.0" prefWidth="220.0" visible="false">
                    <AnchorPane prefHeight="555.0" prefWidth="220.0" stylesheets="dashboardDesign.css" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                        <styleClass>
                            <String fx:value="nav" />
@@ -163,7 +178,8 @@
                        <Line endX="100.0" layoutX="111.0" layoutY="152.0" startX="-100.0" stroke="WHITE" />
                        <Button fx:id="CoursCoach_btn" layoutX="21.0" layoutY="186.0" mnemonicParsing="false" onAction="#goToCoursCoach" prefHeight="35.0" prefWidth="180.0" styleClass="nav-btn" stylesheets="dashboardDesign.css" text="Dashboard" />
                        <Button fx:id="membreCoach_btn" layoutX="21.0" layoutY="232.0" mnemonicParsing="false" onAction="#goToMembreCoach" prefHeight="35.0" prefWidth="180.0" styleClass="nav-btn" stylesheets="dashboardDesign.css" text="Coaches" />
-   
+               <Line endX="98.99998474121094" layoutX="121.0" layoutY="162.0" startX="-100.0" stroke="WHITE" />
+
                                                               <Button fx:id="logoutCoach" layoutX="20.0" layoutY="543.0" mnemonicParsing="false" onAction="#logout" stylesheets="dashboardDesign.css">
                            <graphic>
                                <FontAwesomeIconView fill="WHITE" glyphName="SIGN_OUT" size="2em" />
@@ -181,10 +197,10 @@
                        <Button fx:id="payment_btn" layoutX="20.0" layoutY="324.0" mnemonicParsing="false" onAction="#switchForm" prefHeight="35.0" prefWidth="180.0" styleClass="nav-btn" stylesheets="dashboardDesign.css" text="Payment" />
                    </AnchorPane>
                </AnchorPane>
-   
+
                                           
-                                                         <!--  <center>-->
-   <!--            <AnchorPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">-->
+<!--                                                           <center>-->
+<!--               <AnchorPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">-->
    <!--                &lt;!&ndash;*******************************************  DASHBOARD :)   *****************************&ndash;&gt;-->
    
                                           <!--                &lt;!&ndash;                                  <AnchorPane fx:id="dashboard_form" layoutX="143.0" layoutY="126.0" prefHeight="555.0" prefWidth="880.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">&ndash;&gt;-->
