--- a/src/main/resources/dashboardDesign.css
+++ b/src/main/resources/dashboardDesign.css
@@ -41,14 +41,14 @@ and open the template in the editor.
 }
 
 .nav{
-    -fx-background-color: linear-gradient(to top right, #2c2c57, #392b78);
+    -fx-background-color: linear-gradient(to top right, #2c2c57, #2c3e50);
 }
 .nav-border{
     -fx-border-color: #000;
     -fx-border-width: 0px .2px .4px .4px;
 }
 .nav-vbox{
-    -fx-background-color: linear-gradient(to top right, #2c2c57, #392b78);
+    -fx-background-color: linear-gradient(to top right, #2c2c57, #2c3e50);
     -fx-border-color: #000;
     -fx-border-width: 0px .2px .4px .4px;
 }
@@ -67,7 +67,7 @@ and open the template in the editor.
 }
 
 .logout{
-    -fx-background-color: #392b78;
+    -fx-background-color: #2c3e50;
     -fx-cursor:hand;
     -fx-background-radius: 50px;
     -fx-padding: 5px;
@@ -88,7 +88,7 @@ and open the template in the editor.
 .textfield{
     -fx-background-color: #efefef;
     -fx-background-radius: 4px;
-    -fx-border-color: linear-gradient(to top right, #2c2c57, #392b78);
+    -fx-border-color: linear-gradient(to top right, #2c2c57, #2c3e50);
     -fx-border-radius: 4px;
     -fx-border-width: .5px;
     -fx-font-family: Tahoma;
@@ -106,12 +106,12 @@ and open the template in the editor.
     -fx-font-size: 14px;
 }
 .btn:hover{
-    -fx-background-color: #392b78;
+    -fx-background-color: #2c3e50;
 }
 
 .table-view{
     -fx-background-color: transparent;
-    -fx-border-color: linear-gradient(to top right, #2c2c57, #392b78);
+    -fx-border-color: linear-gradient(to top right, #2c2c57, #2c3e50);
     -fx-border-radius: 8px;
     -fx-border-width: 2px;
     -fx-padding: 0px;
@@ -120,7 +120,7 @@ and open the template in the editor.
     -fx-alignment: CENTER;
 }
 .table-view .column-header-background{
-    -fx-background-color: linear-gradient(to top right, #2c2c57, #392b78);
+    -fx-background-color: linear-gradient(to top right, #2c2c57, #2c3e50);
     -fx-background-radius: 8px 8px 0px 0px;
 }
 .table-view .column-header, .filter{
@@ -130,4 +130,37 @@ and open the template in the editor.
 .table-view .column-header .label{
     -fx-text-fill: #fff;
     -fx-font-family: Arial;
+}
+
+/* Report Bug/Suggestion */
+.report_container {
+    -fx-background-color: #EEFFEE;
+    -fx-background-radius: 10;
+    -fx-alignment: center;
+    -fx-spacing: 10;
+    -fx-padding: 10 0 10 0;
+}
+
+.report_container Text {
+    -fx-font-weight: bold;
+    -fx-fill: #2c2c57;
+}
+
+.report_container Label {
+    -fx-text-alignment: center;
+    -fx-wrap-text: true;
+}
+
+.report_container Button {
+    -fx-pref-width: 80;
+    -fx-background-color: #2c2c57;
+    -fx-text-fill: #FFFFFF;
+}
+
+.report_container Button:hover {
+    -fx-cursor: hand;
+}
+
+.report_container Button FontAwesomeIconView {
+    -fx-fill: #FFFFFF;
 }
