--- a/src/main/resources/dashboardX.fxml
+++ b/src/main/resources/dashboardX.fxml
@@ -13,7 +13,7 @@
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="750.0" prefWidth="1100.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.bty.Controllers.DashboardController">
     <AnchorPane fx:id="main_form" layoutX="6.0" layoutY="6.0" prefHeight="750.0" prefWidth="234.0">
         <!--  atheya l borderPane eli feh atop wl left wl center  -->
-        <AnchorPane prefHeight="750.0" prefWidth="234.0" styleClass="border-pane" stylesheets="dashboardDesign.css" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+        <AnchorPane prefHeight="744.0" prefWidth="235.0" styleClass="border-pane" stylesheets="dashboardDesign.css" AnchorPane.bottomAnchor="6.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
                <!--                                <top>-->
                <!--                                    <AnchorPane prefHeight="45.0" prefWidth="1100.0" styleClass="semi-top"-->
@@ -75,24 +75,18 @@
                            </font>
                        </Label>
                        <Line endX="100.0" layoutX="111.0" layoutY="152.0" startX="-100.0" stroke="WHITE" />
-                       <Button fx:id="dashboard_btn" layoutX="21.0" layoutY="186.0" mnemonicParsing="false" onAction="#goToDashbordAdmin" prefHeight="35.0" prefWidth="180.0" styleClass="nav-btn" stylesheets="dashboardDesign.css" text="Dashboard" />
-                       <Button fx:id="coaches_btn" layoutX="22.0" layoutY="228.0" mnemonicParsing="false" onAction="#goToCoachs" prefHeight="35.0" prefWidth="180.0" styleClass="nav-btn" stylesheets="dashboardDesign.css" text="Coachs" AnchorPane.bottomAnchor="487.2" />
-                       <Button fx:id="members_btn" layoutX="22.0" layoutY="271.0" mnemonicParsing="false" onAction="#goToMembre" prefHeight="35.0" prefWidth="180.0" styleClass="nav-btn" stylesheets="dashboardDesign.css" text="Membres" />
-                  <Button fx:id="eventsAdmin_btn" layoutX="22.0" layoutY="313.0" mnemonicParsing="false" onAction="#goToCoachs" prefHeight="35.0" prefWidth="180.0" styleClass="nav-btn" stylesheets="dashboardDesign.css" text="Evenements" />
-                  <Button fx:id="coursAdmin_btn" layoutX="22.0" layoutY="357.0" mnemonicParsing="false" onAction="#goToCoachs" prefHeight="35.0" prefWidth="180.0" styleClass="nav-btn" stylesheets="dashboardDesign.css" text="Cours" />
-                  <Button fx:id="storeAdmin_btn" layoutX="22.0" layoutY="405.0" mnemonicParsing="false" onAction="#goToCoachs" prefHeight="35.0" prefWidth="180.0" styleClass="nav-btn" stylesheets="dashboardDesign.css" text="Store" />
-                  <Line endX="100.0" layoutX="112.0" layoutY="449.0" startX="-100.0" stroke="WHITE" />
-                  <Button fx:id="profileAdmin_btn" layoutX="22.0" layoutY="462.0" mnemonicParsing="false" onAction="#goToCoachs" prefHeight="35.0" prefWidth="180.0" styleClass="nav-btn" stylesheets="dashboardDesign.css" text="Profile" />
-                       <Button fx:id="logout00_btn" layoutX="22.0" layoutY="503.0" mnemonicParsing="false" onAction="#goToCoachs" prefHeight="35.0" prefWidth="180.0" styleClass="nav-btn" stylesheets="dashboardDesign.css" text="Logout" />
-                  <FontAwesomeIconView fill="WHITE" glyphName="USER" layoutX="41.0" layoutY="254.0" size="20" text="" />
-                  <FontAwesomeIconView fill="WHITE" glyphName="USERS" layoutX="39.0" layoutY="295.0" size="20" />
-                  <FontAwesomeIconView fill="WHITE" glyphName="CALENDAR" layoutX="40.0" layoutY="337.0" size="20" />
-                  <FontAwesomeIconView fill="WHITE" glyphName="BOOK" layoutX="39.0" layoutY="382.0" size="20" />
-                  <FontAwesomeIconView fill="WHITE" glyphName="SHOPPING_CART" layoutX="40.0" layoutY="429.0" size="20" />
-                          <FontAwesomeIconView fill="WHITE" glyphName="HOME" layoutX="40.0" layoutY="212.0" size="20" text="" />
-                  <FontAwesomeIconView fill="WHITE" glyphName="ID_CARD" layoutX="37.0" layoutY="486.0" size="20" />
-                     <FontAwesomeIconView fill="WHITE" glyphName="EXTERNAL_LINK" layoutX="40.0" layoutY="529.0" size="20" text="" />
-                  <VBox layoutX="17.0" layoutY="601.0" prefHeight="91.0" prefWidth="180.0" styleClass="report_container">
+                       <Button fx:id="dashboard_btn" layoutX="22.0" layoutY="159.0" mnemonicParsing="false" onAction="#goToDashbordAdmin" prefHeight="35.0" prefWidth="180.0" styleClass="nav-btn" stylesheets="dashboardDesign.css" text="Dashboard" />
+                       <Button fx:id="coaches_btn" layoutX="22.0" layoutY="203.0" mnemonicParsing="false" onAction="#goToCoachs" prefHeight="35.0" prefWidth="180.0" styleClass="nav-btn" stylesheets="dashboardDesign.css" text="Coachs" AnchorPane.bottomAnchor="505.8" />
+                       <Button fx:id="members_btn" layoutX="22.0" layoutY="254.0" mnemonicParsing="false" onAction="#goToMembre" prefHeight="35.0" prefWidth="180.0" styleClass="nav-btn" stylesheets="dashboardDesign.css" text="Membres" />
+                  <Button fx:id="eventsAdmin_btn" layoutX="22.0" layoutY="304.0" mnemonicParsing="false" onAction="#goToCoachs" prefHeight="35.0" prefWidth="180.0" styleClass="nav-btn" stylesheets="dashboardDesign.css" text="Evenements" />
+                  <Button fx:id="coursAdmin_btn" layoutX="22.0" layoutY="350.0" mnemonicParsing="false" onAction="#goToCoachs" prefHeight="35.0" prefWidth="180.0" styleClass="nav-btn" stylesheets="dashboardDesign.css" text="Cours" />
+                       <Button fx:id="offre_btn" layoutX="22.0" layoutY="396.0" mnemonicParsing="false" onAction="#goToOffres" prefHeight="35.0" prefWidth="180.0" styleClass="nav-btn" stylesheets="dashboardDesign.css" text="Offre Coaching" />
+                  <Button fx:id="storeAdmin_btn" layoutX="22.0" layoutY="443.0" mnemonicParsing="false" onAction="#goToCoachs" prefHeight="35.0" prefWidth="180.0" styleClass="nav-btn" stylesheets="dashboardDesign.css" text="Store" />
+                       <Button fx:id="commande_btn" layoutX="21.0" layoutY="486.0" mnemonicParsing="false" onAction="#goToCommandes" prefHeight="35.0" prefWidth="180.0" styleClass="nav-btn" stylesheets="dashboardDesign.css" text="Commande" />
+                  <Line endX="100.0" layoutX="117.0" layoutY="533.0" startX="-100.0" stroke="WHITE" />
+                  <Button fx:id="profileAdmin_btn" layoutX="22.0" layoutY="547.0" mnemonicParsing="false" onAction="#goToCoachs" prefHeight="35.0" prefWidth="180.0" styleClass="nav-btn" stylesheets="dashboardDesign.css" text="Profile" />
+                       <Button fx:id="logout00_btn" layoutX="22.0" layoutY="588.0" mnemonicParsing="false" onAction="#goToCoachs" prefHeight="35.0" prefWidth="180.0" styleClass="nav-btn" stylesheets="dashboardDesign.css" text="Logout" />
+                  <VBox layoutX="11.0" layoutY="664.0" prefHeight="72.0" prefWidth="180.0" styleClass="report_container">
                      <children>
                         <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Report Suggestion/Bug?" />
                         <Label prefHeight="18.0" prefWidth="198.0" text="Use this to report any errors or suggestions." />
@@ -103,6 +97,17 @@
                         </Button>
                      </children>
                   </VBox>
+                          <FontAwesomeIconView fill="WHITE" glyphName="HOME" layoutX="43.0" layoutY="188.0" size="20" />
+                  <FontAwesomeIconView fill="WHITE" glyphName="USER" layoutX="46.0" layoutY="228.0" size="20" />
+                  <FontAwesomeIconView fill="WHITE" glyphName="USERS" layoutX="39.0" layoutY="275.0" size="20" />
+                  <FontAwesomeIconView fill="WHITE" glyphName="CALENDAR" layoutX="41.0" layoutY="327.0" size="20" />
+                  <FontAwesomeIconView fill="WHITE" glyphName="BOOK" layoutX="41.0" layoutY="379.0" size="20" />
+                         <FontAwesomeIconView fill="WHITE" glyphName="BOOK" layoutX="44.0" layoutY="423.0" size="20" />
+                  <FontAwesomeIconView fill="WHITE" glyphName="SHOPPING_CART" layoutX="46.0" layoutY="469.0" size="20" />
+                  <FontAwesomeIconView fill="WHITE" glyphName="BOOK" layoutX="39.0" layoutY="507.0" size="20" />
+                  <FontAwesomeIconView fill="WHITE" glyphName="ID_CARD" layoutX="42.0" layoutY="574.0" size="20" />
+                     <FontAwesomeIconView fill="WHITE" glyphName="EXTERNAL_LINK" layoutX="43.0" layoutY="612.0" size="20" />
+
 
 
             
@@ -113,7 +118,7 @@
    
              <!--   ************************************       SIdeBar MEMBRE  *******************************************-->
 
-                       <AnchorPane fx:id="dashboard_membre" layoutX="14.0" layoutY="159.0" prefHeight="555.0" prefWidth="220.0" visible="false">
+                       <AnchorPane fx:id="dashboard_membre" layoutX="14.0" layoutY="159.0" prefHeight="586.0" prefWidth="220.0" visible="false">
                    <AnchorPane prefHeight="555.0" prefWidth="220.0" stylesheets="dashboardDesign.css" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                        <styleClass>
                            <String fx:value="nav" />
@@ -199,7 +204,7 @@
                </AnchorPane>
 
                                           
-<!--                                                           <center>-->
+<!--                     <center>-->
 <!--               <AnchorPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">-->
    <!--                &lt;!&ndash;*******************************************  DASHBOARD :)   *****************************&ndash;&gt;-->
    
