--- a/src/main/resources/dashboardDesign.css
+++ b/src/main/resources/dashboardDesign.css
@@ -41,7 +41,14 @@ and open the template in the editor.
 }
 
 .nav{
-    -fx-background-color: linear-gradient(to top right, #2c2c57, #392b78);
+    -fx-background-color: #2c3e50;
+    -fx-border-radius: 10;
+
+}
+
+.nav1{
+    -fx-background-color: linear-gradient(to top right, #7AA95C , #7AA95C);
+    -fx-border-radius: 10;
 }
 .nav-border{
     -fx-border-color: #000;
@@ -57,13 +64,30 @@ and open the template in the editor.
     -fx-font-size: 14px;
     -fx-font-family: Arial;
 }
+
+.nav-btnproduit{
+    -fx-font-size: 10px;
+    -fx-padding: 10 16;
+    -fx-background-radius: 10;
+    -fx-background-color: #A62609;
+    -fx-text-fill: white;
+}
+
+.nav-btnactualiser{
+    -fx-font-size: 10px;
+    -fx-padding: 10 16;
+    -fx-background-radius: 10;
+    -fx-background-color: #7AA95C;
+    -fx-text-fill: white;
+}
+
 .nav-btn:hover{
     -fx-background-color: #fff;
     -fx-text-fill: #000;
 }
 
 .logout{
-    -fx-background-color: #392b78;
+    -fx-background-color: #A62609;
     -fx-cursor:hand;
     -fx-background-radius: 50px;
     -fx-padding: 5px;
@@ -72,9 +96,7 @@ and open the template in the editor.
     -fx-background-color: #5041a7;
 }
 
-.shadow{
-    -fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.5), 8,0,0,0);
-}
+
 
 .white-bg{
     -fx-background-color: #fff;
@@ -107,7 +129,7 @@ and open the template in the editor.
 
 .table-view{
     -fx-background-color: transparent;
-    -fx-border-color: linear-gradient(to top right, #2c2c57, #392b78);
+    -fx-border-color: linear-gradient(to top right, #2c3e50, #2c3e50);
     -fx-border-radius: 8px;
     -fx-border-width: 2px;
     -fx-padding: 0px;
@@ -116,7 +138,7 @@ and open the template in the editor.
     -fx-alignment: CENTER;
 }
 .table-view .column-header-background{
-    -fx-background-color: linear-gradient(to top right, #2c2c57, #392b78);
+    -fx-background-color: linear-gradient(to top right,#2c3e50, #2c3e50);
     -fx-background-radius: 8px 8px 0px 0px;
 }
 .table-view .column-header, .filter{
