--- a/src/main/resources/LoginGym.fxml
+++ b/src/main/resources/LoginGym.fxml
@@ -8,6 +8,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
 <StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.bty.Controllers.LoginGymController">
    <children>
@@ -36,29 +37,27 @@
                <Font name="Berlin Sans FB" size="25.0" />
             </font>
          </Label>
-         <TextField fx:id="si_email" layoutX="40.0" layoutY="172.0" onAction="#login" prefHeight="35.0" prefWidth="220.0" promptText="Username" styleClass="textfield" stylesheets="loginDesign.css" />
-         <PasswordField fx:id="si_password" layoutX="40.0" layoutY="217.0" onAction="#login" prefHeight="35.0" prefWidth="220.0" promptText="Password" styleClass="textfield" stylesheets="loginDesign.css" />
-         <Button fx:id="si_loginBtn" layoutX="41.0" layoutY="267.0" mnemonicParsing="false" onAction="#login" prefHeight="40.0" prefWidth="220.0" styleClass="login-btn" stylesheets="loginDesign.css" text="Login" />
+                  <Label fx:id="errorEmail_lbl" layoutX="40.0" layoutY="191.0" prefHeight="17.0" prefWidth="174.0" styleClass="error_lbl" />
+         <TextField fx:id="si_email" layoutX="40.0" layoutY="158.0" onAction="#login" prefHeight="35.0" prefWidth="220.0" promptText="Email" styleClass="textfield" stylesheets="loginDesign.css" />
+         <PasswordField fx:id="si_password" layoutX="40.0" layoutY="209.0" onAction="#login" prefHeight="35.0" prefWidth="220.0" promptText="Mot de Passe" styleClass="textfield" stylesheets="loginDesign.css" />
+         <Button fx:id="si_loginBtn" layoutX="40.0" layoutY="304.0" mnemonicParsing="false" onAction="#login" prefHeight="40.0" prefWidth="220.0" styleClass="login-btn" stylesheets="loginDesign.css" text="Login" />
+            <Text fx:id="restPwd_btn" layoutX="40.0" layoutY="272.0" onMouseClicked="#restPwd" strokeType="OUTSIDE" strokeWidth="0.0" text="Mot de Passe Oublié ?" styleClass="text-hover-hand" />
+            <Label fx:id="errorPwd_lbl" layoutX="40.0" layoutY="244.0" prefHeight="17.0" prefWidth="174.0" styleClass="error_lbl" />
          </children>
       </AnchorPane>
-      <AnchorPane fx:id="sub_form" prefHeight="400.0" prefWidth="300.0" styleClass="side-form"
-                  stylesheets="loginDesign.css" AnchorPane.leftAnchor="0.0">
+      <AnchorPane fx:id="sub_form" prefHeight="400.0" prefWidth="300.0" styleClass="side-form" stylesheets="loginDesign.css" AnchorPane.leftAnchor="0.0">
          <children>
-         <FontAwesomeIconView fill="WHITE" glyphName="USERS" layoutX="86.0" layoutY="171.0" size="10em"/>
+         <FontAwesomeIconView fill="WHITE" glyphName="USERS" layoutX="86.0" layoutY="171.0" size="10em" />
          <Label layoutX="46.0" layoutY="200.0" text="Gym Management System" textFill="WHITE">
             <font>
-               <Font name="Tahoma" size="18.0"/>
+               <Font name="Tahoma" size="18.0" />
             </font>
          </Label>
-         <Button fx:id="sub_signupBtn" layoutX="60.0" layoutY="351.0" mnemonicParsing="false"
-                 onAction="#signupSlider" prefHeight="35.0" prefWidth="181.0" styleClass="side-btn"
-                 stylesheets="loginDesign.css" text="Sign Up"/>
-         <Button fx:id="sub_loginBtn" layoutX="60.0" layoutY="351.0" mnemonicParsing="false"
-                 onAction="#loginSlider" prefHeight="35.0" prefWidth="181.0" styleClass="side-btn"
-                 stylesheets="loginDesign.css" text="SIgn In" visible="true"/>
+         <Button fx:id="sub_signupBtn" layoutX="60.0" layoutY="351.0" mnemonicParsing="false" onAction="#signupSlider" prefHeight="35.0" prefWidth="181.0" styleClass="side-btn" stylesheets="loginDesign.css" text="Sign Up" />
+         <Button fx:id="sub_loginBtn" layoutX="60.0" layoutY="351.0" mnemonicParsing="false" onAction="#loginSlider" prefHeight="35.0" prefWidth="181.0" styleClass="side-btn" stylesheets="loginDesign.css" text="SIgn In" visible="true" />
          <Label fx:id="edit_label" layoutX="83.0" layoutY="316.0" text="Create Account" textFill="WHITE">
             <font>
-               <Font name="Tahoma" size="20.0"/>
+               <Font name="Tahoma" size="20.0" />
             </font>
          </Label>
          </children>
