--- a/src/main/resources/verifCode.css
+++ b/src/main/resources/verifCode.css
@@ -4,24 +4,22 @@
 
 /* Logo Container Styles */
 .login_logo_container {
-    -fx-background-color: #0F7874;
+    -fx-background-color: #132A13;
     -fx-alignment: center;
-
 }
+
 .login_logo_container Text {
-    -fx-fill: #FF544D;
-    -fx-font-weight: bold;
-    -fx-font-family: "Comic Sans MS";
     -fx-font-size: 2em;
+    -fx-fill: #FFFFFF;
 }
 
 .login_logo_container FontAwesomeIconView {
-    -fx-fill: #FF544D;
+    -fx-fill: #ECF39E;
 }
 
 /* Account Selector ChoiceBox Styles */
 .account_selector {
-    -fx-background-color: #4AD7D1;
+    -fx-background-color: #ECF39E;
 }
 
 .account_selector .label {
@@ -34,7 +32,7 @@
 }
 
 #choice-box-popup-menu {
-    -fx-background-color: #4AD7D1;
+    -fx-background-color: #ECF39E;
 }
 
 /* Login Form Styles */
@@ -43,30 +41,27 @@
     -fx-font-weight: 400;
 }
 
-
-
 .login_form_container {
     -fx-spacing: 15;
     -fx-alignment: top_left;
 }
 
-.login_form_container .label {
+.login_form_container Label {
     -fx-font-size: 1.1em;
     -fx-font-weight: bold;
 }
 
 .input_field {
     -fx-background-color: #FFFFFF;
-    -fx-font-size: 1.2em;
     -fx-pref-height: 35;
-
+    -fx-font-size: 1.2em;
 }
 
 .login_form_container Button {
-    -fx-background-color: #0F7874;
+    -fx-background-color: #132A13;
     -fx-text-fill: #FFFFFF;
-    -fx-pref-height: 30;
     -fx-pref-width: 350;
+    -fx-pref-height: 30;
     -fx-font-size: 1.2em;
 }
 
@@ -76,4 +71,8 @@
 
 .error_lbl {
     -fx-text-fill: #FF0000;
+}
+
+.text-hover-hand:hover {
+    -fx-cursor: hand;
 }
